syntax = "proto3";
package distqueue;

option go_package = "proto/distqueue";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";


message QueueItem {
    // item is of any type and should be determine by the server
    // keeps the abstraction reuable for multiple use cases
    google.protobuf.Any item = 1;
}

message ServerQueueItem {
    QueueItem item = 1;
    google.protobuf.Timestamp prev_ts = 2;
    google.protobuf.Timestamp ts = 3;
}

message GetRangeRequest {
    google.protobuf.Timestamp after = 1;
    google.protobuf.Timestamp before = 2;
}

service DistributedQueueService {
    // Connect initializes a connection between the workers and leader. Workers stream items
    // to the leader and the leader will determine the order of the items
    // and send it to all connected workers. Workers will only receive messages inserted into
    // the queue after Connect is called.
    rpc Connect(stream QueueItem) returns (stream ServerQueueItem);

    // GetRange returns a stream of (in order) items between the given time range.
    rpc GetRange(GetRangeRequest) returns (stream ServerQueueItem);
}